# live-bootcamp-project

./: Cargo.toml  compose.yml
.github/workflows/: prod.yml
app-service/: Dockerfile
app-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile  api_schema.yml
auth-service/http/: hc.http
auth-service/src/: lib.rs
auth-service/src/routes/: mod.rs  signup.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routers.rs  signup.rs  verify_2fa.rs  verify_token.rs
tf/: .env.example  .gitignore  Makefile  ec2.tf  igw.tf  main.tf  route-table.tf  route53.tf  security-group.tf  subnet.tf  vars.tf  vpc.tf
tf/scripts/: user-data.sh
